--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  background-color: #000;
 }
 
 .app {
@@ -41,7 +41,7 @@ h1 {
 }
 
 .search {
-  width: 71%;
+  width: 60%;
   margin: 4rem 0 2rem;
 
   display: flex;
@@ -49,10 +49,9 @@ h1 {
   justify-content: center;
 
   padding: 1.5rem 1.75rem;
-  border-radius: 3rem;
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  border-radius: 1rem;
+  background: #000;
+  border: 1px solid #373434;
 }
 
 .search input {
@@ -64,8 +63,8 @@ h1 {
   padding-right: 1rem;
 
   outline: none;
-  color: #a1a1a1;
-  background: #1f2123;
+  color: #373434;
+  background: #000;
 }
 
 .search img {
@@ -138,7 +137,7 @@ h1 {
 }
 
 .movie:hover {
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+background-color: #000;
   transform: scale(1.05, 1.05);
 }
 
@@ -154,7 +153,7 @@ h1 {
 
 .movie div:nth-of-type(3) {
   z-index: 2;
-  background-color: #343739;
+  background-color: #000;
   padding: 16px 24px 24px 24px;
 
   position: absolute;
